[package]
name = "coord_transforms"
version = "1.2.2"
authors = ["David Kramer <davegkramer@gmail.com>"]
description = "A Rust crate use for performing coordinate transformations."
repository = "https://github.com/DaveKram/coord_transforms"
readme = "README.md"
keywords = ["coordinates", "geospatial", "transforms", "transformations"]
categories = ["algorithms", "embedded", "science", "parsing"]
license = "MIT"

[dependencies]
nalgebra = "0.18.1"
float-cmp = "0.5.2"

[dev-dependencies]
chrono = "0.4.9"
rayon = "1.2.0"
minifb = "0.13.0"
