[package]
name = "coord_transforms"
version = "1.4.0"
authors = ["David Kramer <davegkramer@gmail.com>"]
description = "A Rust crate use for performing coordinate transformations."
repository = "https://github.com/DaveKram/coord_transforms"
readme = "README.md"
keywords = ["coordinates", "geospatial", "transforms", "transformations"]
categories = ["algorithms", "embedded", "science", "parsing"]
license = "MIT"

[dependencies]
nalgebra = "0.31.0"
float-cmp = "0.9.0"

[dev-dependencies]
chrono = "0.4.19"
rayon = "1.5.3"
minifb = "0.23.0"
